# trustify

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Cross.toml  Dockerfile  README.md  RELEASE.md  openapi.yaml  rust-toolchain.toml  rustfmt.toml
api/: Cargo.toml
api/src/: db.rs  lib.rs  system.rs
api/src/system/: advisory.rs  advisory_cve.rs  affected_package_version_range.rs  cpe22.rs  cve.rs  error.rs  fixed_package_version.rs  mod.rs  package.rs  sbom.rs  scanner.rs  vex.rs  vulnerability.rs
backend/: Cargo.toml  README.md
backend/api/: Cargo.toml
backend/api/src/: db.rs  lib.rs
backend/cli/: Cargo.toml
backend/cli/src/: main.rs
backend/cli/tests/: cli.rs
backend/client/: Cargo.toml
backend/common/: Cargo.toml
backend/common/src/: config.rs  lib.rs  purl.rs
backend/deploy/compose/: compose.yaml
backend/entity/: Cargo.toml
backend/entity/src/: advisory_vulnerability.rs  affected_package_version_range.rs  package_qualifier.rs  package_version.rs  package_version_range.rs  qualified_package.rs
backend/importer/: Cargo.toml  README.md
backend/importer/src/: lib.rs  progress.rs
backend/migration/src/: m0000044_create_qualified_package.rs  m0000047_create_affected_package_version_range.rs  m0000220_create_qualified_package_transitive_function.rs
backend/server/: Cargo.toml
backend/server/src/: dto.rs  lib.rs
cli/: Cargo.toml
cli/src/: main.rs
common/: Cargo.toml
common/auth/: Cargo.toml
common/auth/examples/: generate_auth_schema.rs
common/auth/schema/: auth.json
common/auth/src/: auth.rs  default.rs  devmode.rs  lib.rs  permission.rs  swagger_ui.rs  utoipa.rs
common/db/: Cargo.toml
common/db/src/: embedded.rs  lib.rs
common/infrastructure/: Cargo.toml
common/infrastructure/src/: endpoint.rs  infra.rs  lib.rs  otel.rs  tracing.rs
common/src/: config.rs  cpe.rs  cpe22.rs  cvss3.rs  db.rs  decompress.rs  endpoints.rs  error.rs  hash.rs  hashing.rs  id.rs  lib.rs  memo.rs  model.rs  purl.rs  reqwest.rs  serde.rs  test_util.rs  time.rs  tls.rs  uuid.rs
common/src/advisory/: mod.rs
common/src/db/: cache.rs  chunk.rs  embedded.rs  func.rs  limiter.rs  mod.rs  multi_model.rs  query.rs  test.rs
common/src/model/: bytesize.rs
common/src/package/: dependencies.rs  mod.rs  vulnerabilities.rs
common/src/sbom/: mod.rs  spdx.rs
common/src/service/: result.rs
common/ui/: Cargo.toml
common/ui/src/: lib.rs
cvss/: Cargo.toml
cvss/src/: cvss3.rs  cvss4.rs  lib.rs
cvss/src/cvss3/: mod.rs  score.rs  severity.rs
entity/: CHANGES.md  Cargo.toml
entity/src/: advisory.rs  advisory_cve.rs  advisory_vulnerability.rs  affected_package_version_range.rs  base_purl.rs  conversation.rs  cpe.rs  cpe22.rs  cpe_license_assertion.rs  cve.rs  cve_affected.rs  cvss3.rs  cvss4.rs  extracted_licensing_infos.rs  fixed_package_version.rs  has_extracted_licensing_infos.rs  importer.rs  importer_report.rs  labels.rs  lib.rs  license.rs  licensing_infos.rs  not_affected_package_version.rs  organization.rs  package.rs  package_dependency.rs  package_name.rs  package_namespace.rs  package_qualifier.rs  package_relates_to_package.rs  package_scan_vulnerability.rs  package_status.rs  package_type.rs  package_version.rs  package_version_range.rs  package_vulnerability.rs  product.rs  product_status.rs  product_version.rs  product_version_range.rs  (+34 more)
graph/: Cargo.toml
graph/src/: db.rs  endpoints.rs  lib.rs
graph/src/graph/: cpe22.rs  mod.rs  vulnerability.rs
importer/: Cargo.toml  README.md
importer/src/: csaf.rs  lib.rs  main.rs  progress.rs
importer/src/csaf/: mod.rs
importer/src/sbom/: mod.rs  process.rs  sbom.rs
ingestors/: Cargo.toml
ingestors/src/: hashing.rs  lib.rs
ingestors/src/advisory/: csaf.rs  mod.rs
ingestors/src/cve/: loader.rs  mod.rs
integration-tests/: Cargo.toml
integration-tests/src/: lib.rs  stream.rs
integration-tests/src/csaf/: mod.rs  perf.rs
integration-tests/src/sbom/: broken_ref.rs  mod.rs  stream.rs
migration/: Cargo.toml
migration/src/: ai.rs  lib.rs  m0000001_create_cvss3_enums.rs  m0000002_create_cvss4_enums.rs  m0000005_admin_up.sql  m0000010_create_sbom.rs  m0000010_init.rs  m0000010_init_down.sql  m0000010_init_up.sql  m0000011_create_cve.rs  m0000011_create_vulnerability.rs  m0000012_create_vulnerability_description.rs  m0000015_create_license_category_enums.rs  m000001_create_package_type.rs  m000001_sbom.rs  m0000020_add_sbom_group.rs  m0000020_create_cvss4_enums.rs  m0000022_create_organization.rs  m000002_advisory_source.rs  m000002_create_package_namespace.rs  m000002_create_package_qualifier.rs  m000002_vex.rs  m0000030_create_advisory.rs  m0000030_create_licensing_infos.rs  m0000030_create_sbom.rs  m0000030_perf_adv_vuln.rs  m0000032_create_advisory_cve.rs  m0000032_create_advisory_vulnerability.rs  m0000033_create_cvss3.rs  m0000034_create_cvss4.rs  m0000035_create_cpe.rs  m0000035_create_cpe22.rs  m0000035_create_extracted_licensing_infos.rs  m000003_advisory.rs  m000003_create_package_dependency.rs  m000003_create_package_name.rs  m000003_create_package_qualifier.rs  m000003_scanner.rs  m0000040_create_license_export.rs  m0000040_create_package.rs  (+203 more)
migration/src/data/: mod.rs
migration/src/m00001010_alter_mavenver_cmp_fns/: mavenver_cmp_up.sql  (+1 more)
migration/tests/: getpurl.rs  mavenver.rs  rpmver.rs  semver.rs  tests.rs  version_common.rs
model/: Cargo.toml  README.md
model/src/: lib.rs
modules/analysis/: Cargo.toml  README.md
modules/fetch/: Cargo.toml  README.md
modules/fundamental/: Cargo.toml  README.md
modules/graphql/: Cargo.toml  README.md
modules/importer/: Cargo.toml  README.md
server/: Cargo.toml
server/src/: embedded_oidc.rs  endpoints.rs  lib.rs  openapi.rs  sample_data.rs
test-context/: Cargo.toml
test-context/src/: app.rs  auth.rs  call.rs  flame.rs  lib.rs  spdx.rs  subset.rs
trustd/: Cargo.toml  build.rs
trustd/src/: db.rs  main.rs  openapi.rs  sample_data.rs
trustd/tests/: tests.rs
xtask/: Cargo.toml
xtask/schema/: generate-dump.json
xtask/src/: ai.rs  dataset.rs  log.rs  main.rs  openapi.rs  precommit.rs  schema.rs
(+1295 files in other folders)
