[workspace]
resolver = "2"
members = [
    "common",
    "common/auth",
    "common/infrastructure",
    "cvss",
    "entity",
    "migration",
    "modules/analysis",
    "modules/fundamental",
    "modules/graphql",
    "modules/importer",
    "modules/ingestor",
    "modules/storage",
    "modules/ui",
    "modules/user",
    "server",
    "test-context",
    "trustd",
    "xtask",
]

[workspace.package]
version = "0.1.0-alpha.23"
edition = "2021"
publish = false
license = "Apache-2.0"

[workspace.dependencies]
actix = "0.13.3"
actix-cors = "0.7"
actix-http = "3.3.1"
actix-tls = "3"
actix-web = "4.3.1"
actix-web-extras = "0.1"
actix-web-httpauth = "0.8"
actix-web-opentelemetry = "0.19"
actix-web-prom = "0.8.0"
actix-web-static-files = "4.0.1"
anyhow = "1.0.72"
async-compression = "0.4.13"
async-graphql = "7.0.5"
async-graphql-actix-web = "7.0.5"
async-std = "1"
async-trait = "0.1.74"
async-openai = "0.25.0"
base64 = "0.22"
biscuit = "0.7"
build-info = "0.0.39"
build-info-build = "0.0.39"
build-info-common = "0.0.39"
bytes = "1.5"
bytesize = "1.3"
criterion = "0.5.1"
chrono = { version = "0.4.35", default-features = false }
clap = "4"
concat-idents = "1"
cpe = "0.1.5"
csaf = { version = "0.5.0", default-features = false }
csaf-walker = { version = "0.10.0-alpha.1", default-features = false }
cve = "0.3.1"
cyclonedx-bom = "0.7.0"
env_logger = "0.11.0"
futures = "0.3.30"
futures-util = "0.3"
garage-door = "0.1.1"
git2 = { version = "0.19.0", features = ["ssh"] }
hex = "0.4.3"
hide = "0.1.5"
http = "1"
human-date-parser = "0.2"
humantime = "2"
humantime-serde = "1"
indicatif = "0.17.8"
indicatif-log-bridge = "0.2"
itertools = "0.13"
jsn = "0.14"
json-merge-patch = "0.0.1"
jsonpath-rust = "0.7.0"
langchain-rust = { version = "4.6.0" }
lenient_semver = "0.4.2"
liblzma = "0.3"
libz-sys = "*"
log = "0.4.19"
mime = "0.3.17"
native-tls = "0.2"
nu-ansi-term = "0.46"
once_cell = "1.19.0"
openid = "0.15"
openssl = "0.10"
opentelemetry = "0.24"
# Note: This uses OTEL 0.24 https://crates.io/crates/opentelemetry-otlp/0.17.0/dependencies
opentelemetry-otlp = "0.17"
opentelemetry_sdk = "0.24"
osv = { version = "0.2.0", default-features = false }
packageurl = "0.3.0"
parking_lot = "0.12"
peak_alloc = "0.2.0"
pem = "3"
petgraph = { version = "0.6.5", features = ["serde-1"] }
prometheus = "0.13.3"
quick-xml = "0.37.0"
rand = "0.8.5"
reedline = "0.36.0"
regex = "1.10.3"
reqwest = "0.12"
ring = "0.17.8"
roxmltree = "0.20.0"
rstest = "0.23.0"
rust-s3 = "0.35"
sbom-walker = { version = "0.10.0-alpha.1", default-features = false, features = ["crypto-openssl", "cyclonedx-bom", "spdx-rs"] }
schemars = "0.8"
sea-orm = { version = "~1.0", features = ["debug-print"] } # See https://www.sea-ql.org/blog/2024-08-04-sea-orm-1.0/#release-planning
sea-orm-migration = "~1.0"
sea-query = "0.31.0"
semver = "1"
serde = "1.0.183"
serde_json = "1.0.114"
serde_with = "3.11.0"
serde_yml = "0.0.12"
sha2 = "0.10.8"
spdx = "0.10.6"
spdx-expression = "0.5.2"
spdx-rs = "0.5.3"
sqlx = "0.7"
static-files = "0.2.3"
strum = "0.26.3"
temp-env = "0.3"
tempfile = "3"
test-context = "0.3"
test-log = "0.2.16"
thiserror = "1.0.58"
time = "0.3"
tokio = "1.30.0"
tokio-stream = "0.1.15"
tokio-util = "0.7"
tracing = "0.1"
tracing-bunyan-formatter = "0.3.7"
# Note: This uses OTEL 0.24 https://crates.io/crates/tracing-opentelemetry/0.25.0/dependencies
tracing-opentelemetry = "0.25"
tracing-subscriber = { version = "0.3.18", default-features = false }
url = "2.5.0"
urlencoding = "2"
utoipa = "5.1.3"
utoipa-actix-web = { version = "0.1.0" }
utoipa-rapidoc = { version = "5.0.0", features = ["actix-web"] }
utoipa-redoc = { version = "5.0.0", features = ["actix-web"] }
utoipa-swagger-ui = "8.0.3"
uuid = "1.7.0"
walkdir = "2.5"
walker-common = "0.10.0-alpha.1"
walker-extras = "0.10.0-alpha.1"
zip = "2.2.0"

trustify-auth = { path = "common/auth", features = ["actix", "swagger"] }
trustify-common = { path = "common" }
trustify-cvss = { path = "cvss" }
trustify-entity = { path = "entity" }
trustify-infrastructure = { path = "common/infrastructure" }
trustify-migration = { path = "migration" }
trustify-module-fundamental = { path = "modules/fundamental" }
trustify-module-importer = { path = "modules/importer" }
trustify-module-ui = { path = "modules/ui", default-features = false }
trustify-server = { path = "server", default-features = false }
trustify-ui = { git = "https://github.com/trustification/trustify-ui.git", branch = "publish/main" }
trustify-module-ingestor = { path = "modules/ingestor" }
trustify-module-storage = { path = "modules/storage" }
trustify-module-graphql = { path = "modules/graphql" }
trustify-test-context = { path = "test-context" }
trustify-module-analysis = { path = "modules/analysis" }
trustify-module-user = { path = "modules/user" }

# These dependencies are active during both the build time and the run time. So they are normal dependencies
# as well as build-dependencies. However, we can't control feature flags for build dependencies the way we do
# it for normal dependencies. So enabling the vendor feature for openssl-sys doesn't work for the build-dependencies.
# This will fail the build on targets where we need vendoring for openssl. Using rustls instead works around this issue.
postgresql_archive = { version = "0.16.3", default-features = false, features = ["theseus", "rustls-tls"] }
postgresql_embedded = { version = "0.16.3", default-features = false, features = ["theseus", "rustls-tls"] }
postgresql_commands = { version = "0.16.3", default-features = false, features = ["tokio"] }

[patch.crates-io]
#csaf-walker = { git = "https://github.com/ctron/csaf-walker", rev = "7b6e64dd56e4be79e184b053ef754a42e1496fe0" }
#sbom-walker = { git = "https://github.com/ctron/csaf-walker", rev = "7b6e64dd56e4be79e184b053ef754a42e1496fe0" }
#walker-common = { git = "https://github.com/ctron/csaf-walker", rev = "7b6e64dd56e4be79e184b053ef754a42e1496fe0" }
#walker-extras = { git = "https://github.com/ctron/csaf-walker", rev = "7b6e64dd56e4be79e184b053ef754a42e1496fe0" }

#csaf-walker = { path = "../csaf-walker/csaf" }
#sbom-walker = { path = "../csaf-walker/sbom" }
#walker-common = { path = "../csaf-walker/common" }
#walker-extras = { path = "../csaf-walker/extras" }

#garage-door = { git = "https://github.com/ctron/garage-door", rev = "c02fdbbb95d4482d97497dfb62c41dede023b2ea" }
#garage-door = { path = "../garage-door" }
#oxide-auth = { git = "https://github.com/ctron/oxide-auth", rev = "cd0c79c48a702ea6bb0b05e95e9eddcba8f6c77f" }

# required due to https://github.com/KenDJohnson/cpe-rs/pull/15
#cpe = { git = "https://github.com/ctron/cpe-rs", rev = "c3c05e637f6eff7dd4933c2f56d070ee2ddfb44b" }
# required due to https://github.com/voteblake/csaf-rs/pull/29
csaf = { git = "https://github.com/chirino/csaf-rs", rev = "414896904bc5e5287fd88b1daef5c27f70503d01" }
# required due to https://github.com/gcmurphy/osv/pull/51
osv = { git = "http://github.com/ctron/osv", rev = "b53f1590bbbdc663e3efe405f1fa2603e71e8680" }

# to pickup fix: https://github.com/Abraxas-365/langchain-rust/pull/246
#       and fix: https://github.com/Abraxas-365/langchain-rust/pull/250
langchain-rust = { git = "https://github.com/chirino/langchain-rust", branch = "main" }
