[workspace]
resolver = "3"
members = [
    "common",
    "common/auth",
    "common/infrastructure",
    "cvss",
    "entity",
    "migration",
    "modules/analysis",
    "modules/fundamental",
    "modules/graphql",
    "modules/importer",
    "modules/ingestor",
    "modules/storage",
    "modules/ui",
    "modules/user",
    "server",
    "test-context",
    "trustd",
    "xtask",
]

[workspace.package]
version = "0.2.13"
edition = "2024"
publish = false
license = "Apache-2.0"

[workspace.dependencies]
actix = { version = "0.13.3", default-features = false }
actix-cors = { version = "0.7", default-features = false }
actix-http = { version = "3.3.1", default-features = false }
actix-tls = "3"
actix-web = { version = "4.3.1", default-features = false }
actix-web-extras = { version = "0.1", default-features = false }
actix-web-httpauth = { version = "0.8", default-features = false }
actix-web-opentelemetry = { version = "0.21", default-features = false }
actix-web-static-files = { version = "4.0.1", default-features = false }
anyhow = { version = "1.0.72", default-features = false }
async-compression = { version = "0.4.13", default-features = false }
async-graphql = { version = "7.0.5", default-features = false, features = ["graphiql"] }
async-graphql-actix-web = { version = "7.0.5", default-features = false }
async-trait = { version = "0.1.74", default-features = false }
base64 = { version = "0.22", default-features = false }
biscuit = { version = "0.7", default-features = false }
build-info = "0.0.40"
build-info-build = "0.0.40"
build-info-common = "0.0.40"
bytes = { version = "1.5", default-features = false }
bytesize = { version = "2.0", default-features = false }
chrono = { version = "0.4.35", default-features = false }
clap = { version = "4", default-features = false, features = ["std"] }
cpe = { version = "0.1.5", default-features = false }
criterion = { version = "0.5.1", default-features = false }
csaf = { version = "0.5.0", default-features = false }
csaf-walker = { version = "0.12.0", default-features = false }
csv = { version = "1.3.0", default-features = false }
cve = { version = "0.3.1", default-features = false }
deepsize = "0.2.0"
env_logger = { version = "0.11.0", default-features = false }
fixedbitset = { version = "0.5.7", default-features = false }
flate2 = { version = "1.0.35", default-features = false }
futures = { version = "0.3.30", default-features = false }
futures-util = { version = "0.3", default-features = false }
garage-door = { version = "0.1.1", default-features = false }
git2 = { version = "0.20.0", features = ["ssh"] }
hex = { version = "0.4.3", default-features = false }
hide = { version = "0.1.5", default-features = false }
http = { version = "1", default-features = false }
human-date-parser = { version = "0.2", default-features = false }
humantime = { version = "2", default-features = false }
humantime-serde = { version = "1", default-features = false }
itertools = "0.14"
jsn = { version = "0.14", default-features = false }
json-merge-patch = { version = "0.0.1", default-features = false }
jsonpath-rust = { version = "0.7.0", default-features = false }
langchain-rust = { version = "4.6.0", default-features = false  }
lenient_semver = "0.4.2"
liblzma = { version = "0.3", default-features = false }
libz-sys = { version = "*", default-features = false }
log = { version = "0.4.19", default-features = false }
mime = { version = "0.3.17", default-features = false }
moka = { version = "0.12.10", default-features = false }
native-tls = { version = "0.2", default-features = false }
nu-ansi-term = { version = "0.50", default-features = false }
num-traits = { version = "0.2", default-features = false }
openid = { version = "0.16", default-features = false }
openssl = { version = "0.10", default-features = false }
opentelemetry = "0.28"
opentelemetry-otlp = "0.28"
opentelemetry_sdk = "0.28"
osv = { version = "0.2.1", default-features = false, features = [] }
packageurl = { version = "0.3.0", default-features = false }
parking_lot = { version = "0.12", default-features = false }
peak_alloc = { version = "0.2.0", default-features = false }
pem = { version = "3", default-features = false }
percent-encoding = { version = "2.3.1", default-features = false }
petgraph = { version = "0.7.1", default-features = false, features = ["serde-1"] }
quick-xml = { version = "0.37.0", default-features = false }
rand = { version = "0.9.0", default-features = false }
reedline = { version = "0.39.0", default-features = false }
regex = { version = "1.10.3", default-features = false }
reqwest = { version = "0.12", default-features = false }
ring = { version = "0.17.8", default-features = false }
roxmltree = "0.20.0"
rstest = { version = "0.25.0", default-features = false }
rust-s3 = "0.35"
sanitize-filename = { version = "=0.6.0", default-features = false }
sbom-walker = { version = "0.12.0", default-features = false, features = ["crypto-openssl", "serde-cyclonedx", "spdx-rs"] }
schemars = "0.8"
sea-orm = { version = "1", features = ["debug-print"] }
sea-orm-migration = "1"
sea-query = "0.32.0"
semver = { version = "1", default-features = false }
serde = "1.0.183"
serde-cyclonedx = { version = "0.9.1", default-features = false }
serde_json = { version = "1.0.114", default-features = false }
serde_with = { version = "3.11.0", default-features = false }
serde_yml = { version = "0.0.12", default-features = false }
sha2 = { version = "0.10.8", default-features = false }
spdx = { version = "0.10.6", default-features = false }
spdx-expression = { version = "0.5.2", default-features = false }
spdx-rs = { version = "0.5.3", default-features = false }
sqlx = { version = "0.8", default-features = false, features = ["tls-native-tls"] }
static-files = { version = "0.2.3", default-features = false }
strum = "0.27.1"
tar = { version = "0.4.43", default-features = false }
temp-env = { version = "0.3", default-features = false }
tempfile = { version = "3", default-features = false }
termimad = { version = "0.31.0", default-features = false }
test-context = { version = "0.4", default-features = false }
test-log = { version = "0.2.16", default-features = false }
thiserror = { version = "2", default-features = false }
time = { version = "0.3", default-features = false }
tokio = { version = "1.43", default-features = false }
tokio-stream = { version = "0.1.17", default-features = false }
tokio-util = { version = "0.7", default-features = false }
tracing = { version = "0.1", default-features = false }
tracing-bunyan-formatter = { version = "0.3.10", default-features = false }
tracing-core = { version = "0.1", default-features = false }
tracing-flame = { version = "0.2.0", default-features = false }
tracing-futures = { version = "0.2.5", default-features = false }
tracing-opentelemetry = { version = "0.29", default-features = false }
tracing-subscriber = { version = "0.3.19", default-features = false }
url = { version = "2.5.0", default-features = false }
urlencoding = { version = "2", default-features = false }
utoipa = "5.1.3"
utoipa-actix-web = { version = "0.1.0", default-features = false }
utoipa-rapidoc = { version = "6.0.0", default-features = false, features = ["actix-web"] }
utoipa-redoc = { version = "6.0.0", default-features = false, features = ["actix-web"] }
utoipa-swagger-ui = { version = "9.0.0", default-features = false }
uuid = { version = "1.7.0", default-features = false }
walkdir = { version = "2.5", default-features = false }
walker-common = "0.12.0"
walker-extras = "0.12.0"
zip = { version = "~2.4.0", default-features = false, features = ["aes-crypto", "bzip2", "deflate64", "deflate", "lzma", "time", "zstd"] } # default-features false required due to: https://github.com/zip-rs/zip2/issues/326 # tilde version due to: https://github.com/zip-rs/zip2/issues/328

trustify-auth = { path = "common/auth", features = ["actix", "swagger"] }
trustify-common = { path = "common" }
trustify-cvss = { path = "cvss" }
trustify-entity = { path = "entity" }
trustify-infrastructure = { path = "common/infrastructure" }
trustify-migration = { path = "migration" }
trustify-module-fundamental = { path = "modules/fundamental" }
trustify-module-importer = { path = "modules/importer" }
trustify-module-ui = { path = "modules/ui", default-features = false }
trustify-server = { path = "server", default-features = false }
trustify-ui = { git = "https://github.com/trustification/trustify-ui.git", branch = "publish/main" }
trustify-module-ingestor = { path = "modules/ingestor" }
trustify-module-storage = { path = "modules/storage" }
trustify-module-graphql = { path = "modules/graphql" }
trustify-test-context = { path = "test-context" }
trustify-module-analysis = { path = "modules/analysis" }
trustify-module-user = { path = "modules/user" }

# These dependencies are active during both the build time and the run time. So they are normal dependencies
# as well as build-dependencies. However, we can't control feature flags for build dependencies the way we do
# it for normal dependencies. So enabling the vendor feature for openssl-sys doesn't work for the build-dependencies.
# This will fail the build on targets where we need vendoring for openssl. Using rustls instead works around this issue.
postgresql_archive = { version = "0.18.0", default-features = false, features = ["theseus", "rustls"] }
postgresql_embedded = { version = "0.18.0", default-features = false, features = ["theseus", "rustls"] }
postgresql_commands = { version = "0.18.0", default-features = false, features = ["tokio"] }

[patch.crates-io]
#csaf-walker = { git = "https://github.com/ctron/csaf-walker", rev = "7b6e64dd56e4be79e184b053ef754a42e1496fe0" }
#sbom-walker = { git = "https://github.com/ctron/csaf-walker", rev = "7b6e64dd56e4be79e184b053ef754a42e1496fe0" }
#walker-common = { git = "https://github.com/ctron/csaf-walker", rev = "7b6e64dd56e4be79e184b053ef754a42e1496fe0" }
#walker-extras = { git = "https://github.com/ctron/csaf-walker", rev = "7b6e64dd56e4be79e184b053ef754a42e1496fe0" }

#csaf-walker = { path = "../csaf-walker/csaf" }
#sbom-walker = { path = "../csaf-walker/sbom" }
#walker-common = { path = "../csaf-walker/common" }
#walker-extras = { path = "../csaf-walker/extras" }

#garage-door = { git = "https://github.com/ctron/garage-door", rev = "c02fdbbb95d4482d97497dfb62c41dede023b2ea" }
#garage-door = { path = "../garage-door" }
#oxide-auth = { git = "https://github.com/ctron/oxide-auth", rev = "cd0c79c48a702ea6bb0b05e95e9eddcba8f6c77f" }

# required due to https://github.com/KenDJohnson/cpe-rs/pull/15
#cpe = { git = "https://github.com/ctron/cpe-rs", rev = "c3c05e637f6eff7dd4933c2f56d070ee2ddfb44b" }
# required due to https://github.com/voteblake/csaf-rs/pull/29
csaf = { git = "https://github.com/chirino/csaf-rs", rev = "414896904bc5e5287fd88b1daef5c27f70503d01" }
# required due to https://github.com/gcmurphy/osv/pull/58
osv = { git = "https://github.com/ctron/osv", branch = "feature/drop_deps_1" }

# to pickup fix: https://github.com/Abraxas-365/langchain-rust/pull/246
#       and fix: https://github.com/Abraxas-365/langchain-rust/pull/250
langchain-rust = { git = "https://github.com/chirino/langchain-rust", branch = "main" }

# to pickup feat: https://github.com/Aeledfyr/deepsize/pull/41
deepsize = { git = "https://github.com/chirino/deepsize", branch = "main" }

# required due to https://github.com/doubleopen-project/spdx-rs/pull/35
spdx-rs = { git = "https://github.com/ctron/spdx-rs", branch = "feature/add_alias_2" }
