[workspace]
resolver = "3"
members = [
    "common",
    "common/auth",
    "common/infrastructure",
    "cvss",
    "entity",
    "migration",
    "modules/analysis",
    "modules/fundamental",
    "modules/graphql",
    "modules/importer",
    "modules/ingestor",
    "modules/storage",
    "modules/ui",
    "modules/user",
    "server",
    "test-context",
    "trustd",
    "xtask",
]

[workspace.package]
version = "0.3.5"
edition = "2024"
publish = false
license = "Apache-2.0"

[workspace.dependencies]
actix = "0.13.3"
actix-cors = "0.7"
actix-http = "3.3.1"
actix-tls = "3"
actix-web = "4.3.1"
actix-web-extras = "0.1"
actix-web-httpauth = "0.8"
actix-web-static-files = "4.0.1"
anyhow = "1.0.72"
async-compression = "0.4.13"
async-graphql = "7.0.5"
async-graphql-actix-web = "7.0.5"
async-trait = "0.1.74"
aws-config = { version = "1.6.1", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.83.0", features = ["behavior-version-latest"] }
aws-smithy-http-client = { version = "1", features = ["rustls-aws-lc"] }
aws-smithy-types = { version = "1" }
base64 = "0.22"
biscuit = "0.7"
build-info = "0.0.41"
build-info-build = "0.0.41"
build-info-common = "0.0.41"
bytes = "1.5"
bytesize = "2.0"
chrono = { version = "0.4.35", default-features = false }
clap = "4"
cpe = "0.1.5"
criterion = "0.6.0"
csaf = { version = "0.5.0", default-features = false }
csaf-walker = { version = "0.13.0", default-features = false }
csv = "1.3.0"
cve = "0.4.0"
deepsize = "0.2.0"
env_logger = "0.11.0"
fixedbitset = "0.5.7"
flate2 = "1.0.35"
futures = "0.3.30"
futures-util = "0.3"
garage-door = "0.2.0"
git2 = { version = "0.20.0", features = ["ssh"] }
hex = "0.4.3"
hide = "0.1.5"
http = "1"
human-date-parser = "0.3"
humantime = "2"
humantime-serde = "1"
itertools = "0.14"
jsn = "0.14"
json-merge-patch = "0.0.1"
jsonpath-rust = "1.0.1"
langchain-rust = { version = "4.6.0" }
lenient_semver = "0.4.2"
liblzma = "0.4"
libz-sys = "*"
log = "0.4.19"
mime = "0.3.17"
moka = "0.12.10"
native-tls = "0.2"
nu-ansi-term = "0.50"
num-traits = "0.2"
oci-client = "0.15"
openid = "0.17"
openssl = "0.10"
opentelemetry = "0.30"
opentelemetry-otlp = "0.30"
opentelemetry_sdk = "0.30"
opentelemetry-instrumentation-actix-web = "0.22.0"
osv = { version = "0.2.1", default-features = false, features = [] }
packageurl = "0.3.0"
parking_lot = "0.12"
peak_alloc = "0.3.0"
pem = "3"
percent-encoding = "2.3.1"
petgraph = { version = "0.8.0", features = ["serde-1"] }
quick-xml = "0.38.0"
rand = "0.9.0"
reedline = "0.40.0"
regex = "1.10.3"
reqwest = "0.12"
ring = "0.17.8"
roxmltree = "0.20.0"
rstest = "0.25.0"
sanitize-filename = "=0.6.0"
sbom-walker = { version = "0.13.0", default-features = false, features = ["crypto-openssl", "serde-cyclonedx", "spdx-rs"] }
schemars = "1.0"
sea-orm = { version = "1.1.12", features = ["debug-print"] }
sea-orm-migration = "1"
sea-query = "0.32.0"
semver = "1"
serde = "1.0.183"
serde-cyclonedx = "0.9.1"
serde_json = "1.0.114"
serde_with = "3.11.0"
serde_yml = { package = "serde_yaml_ng", version = "0.10" }
sha2 = "0.10.8"
spdx = "0.10.6"
spdx-expression = "0.5.2"
spdx-rs = "0.5.3"
sqlx = { version = "0.8", features = ["tls-native-tls"] }
static-files = "0.2.3"
strum = "0.27.1"
tar = "0.4.43"
temp-env = "0.3"
tempfile = "3"
termimad = "0.33.0"
test-context = "0.4"
test-log = "0.2.16"
thiserror = "2"
time = "0.3"
tokio = "1.43"
tokio-util = "0.7"
tracing = "0.1"
tracing-core = "0.1"
tracing-flame = "0.2.0"
tracing-futures = "0.2.5"
tracing-opentelemetry = "0.31"
tracing-subscriber = { version = "0.3.19", default-features = false }
url = "2.5.0"
urlencoding = "2"
utoipa = "5.1.3"
utoipa-actix-web = { version = "0.1.0" }
utoipa-rapidoc = { version = "6.0.0", features = ["actix-web"] }
utoipa-redoc = { version = "6.0.0", features = ["actix-web"] }
utoipa-swagger-ui = "9.0.0"
uuid = "1.7.0"
walkdir = "2.5"
walker-common = "0.13.0"
walker-extras = "0.13.0"
zip = "4"

trustify-auth = { path = "common/auth", features = ["actix", "swagger"] }
trustify-common = { path = "common" }
trustify-cvss = { path = "cvss" }
trustify-entity = { path = "entity" }
trustify-infrastructure = { path = "common/infrastructure" }
trustify-migration = { path = "migration" }
trustify-module-analysis = { path = "modules/analysis" }
trustify-module-fundamental = { path = "modules/fundamental" }
trustify-module-graphql = { path = "modules/graphql" }
trustify-module-importer = { path = "modules/importer" }
trustify-module-ingestor = { path = "modules/ingestor" }
trustify-module-storage = { path = "modules/storage" }
trustify-module-ui = { path = "modules/ui", default-features = false }
trustify-module-user = { path = "modules/user" }
trustify-server = { path = "server", default-features = false }
trustify-test-context = { path = "test-context" }
trustify-ui = { git = "https://github.com/trustification/trustify-ui.git", branch = "publish/release/0.3.z" }

# These dependencies are active during both the build time and the run time. So they are normal dependencies
# as well as build-dependencies. However, we can't control feature flags for build dependencies the way we do
# it for normal dependencies. So enabling the vendor feature for openssl-sys doesn't work for the build-dependencies.
# This will fail the build on targets where we need vendoring for openssl. Using rustls instead works around this issue.
postgresql_archive = { version = "0.18.0", default-features = false, features = ["theseus", "rustls"] }
postgresql_embedded = { version = "0.18.0", default-features = false, features = ["theseus", "rustls"] }
postgresql_commands = { version = "0.18.0", default-features = false, features = ["tokio"] }

[patch.crates-io]
#csaf-walker = { git = "https://github.com/ctron/csaf-walker", rev = "7b6e64dd56e4be79e184b053ef754a42e1496fe0" }
#sbom-walker = { git = "https://github.com/ctron/csaf-walker", rev = "7b6e64dd56e4be79e184b053ef754a42e1496fe0" }
#walker-common = { git = "https://github.com/ctron/csaf-walker", rev = "7b6e64dd56e4be79e184b053ef754a42e1496fe0" }
#walker-extras = { git = "https://github.com/ctron/csaf-walker", rev = "7b6e64dd56e4be79e184b053ef754a42e1496fe0" }

#csaf-walker = { path = "../csaf-walker/csaf" }
#sbom-walker = { path = "../csaf-walker/sbom" }
#walker-common = { path = "../csaf-walker/common" }
#walker-extras = { path = "../csaf-walker/extras" }

#garage-door = { git = "https://github.com/ctron/garage-door", rev = "c02fdbbb95d4482d97497dfb62c41dede023b2ea" }
#garage-door = { path = "../garage-door" }
#oxide-auth = { git = "https://github.com/ctron/oxide-auth", rev = "cd0c79c48a702ea6bb0b05e95e9eddcba8f6c77f" }

# required due to https://github.com/KenDJohnson/cpe-rs/pull/15
#cpe = { git = "https://github.com/ctron/cpe-rs", rev = "c3c05e637f6eff7dd4933c2f56d070ee2ddfb44b" }
# required due to https://github.com/voteblake/csaf-rs/pull/29
csaf = { git = "https://github.com/trustification/csaf-rs" }
# required due to https://github.com/gcmurphy/osv/pull/58
#osv = { git = "https://github.com/ctron/osv", branch = "feature/drop_deps_1" }

# to pickup fix: https://github.com/Abraxas-365/langchain-rust/pull/246
#       and fix: https://github.com/Abraxas-365/langchain-rust/pull/250
langchain-rust = { git = "https://github.com/chirino/langchain-rust", branch = "main" }

# required due to https://github.com/doubleopen-project/spdx-rs/pull/35
spdx-rs = { git = "https://github.com/ctron/spdx-rs", branch = "feature/add_alias_2" }
