[package]
name = "huevos-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
huevos-entity = { path = "../entity"}
sea-orm = { version = "0.12", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
sea-orm-migration = "0.12.2"
tokio = { version = "1.30.0", features = ["full"] }
huevos-migration = { path = "../migration" }
anyhow = "1.0.72"
log = "0.4.19"
env_logger = "0.10.0"
packageurl = "0.3.0"

[dev-dependencies]
