[package]
name = "huevos-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
huevos-server = { path = "../server"}
anyhow = "1.0.72"
log = "0.4.19"
env_logger = "0.10.0"
serde_json = "1.0.104"
thiserror = "1"

[dev-dependencies]
