[package]
name = "trustify-common"
version = "0.1.0-alpha.7"
edition = "2021"

[dependencies]
trustify-migration = { workspace = true }

anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
concat-idents = { workspace = true }
cpe = { workspace = true }
human-date-parser = { workspace = true }
itertools = { workspace = true }
lenient_semver = { workspace = true }
log = { workspace = true }
native-tls = { workspace = true }
packageurl = { workspace = true }
pem = { workspace = true }
postgresql_embedded = { workspace = true, features = ["blocking", "tokio"] }
postgresql_archive = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true, features = ["native-tls"] }
sea-orm = { workspace = true, features = ["sea-query-binder", "sqlx-postgres", "runtime-tokio-rustls", "macros"] }
sea-query = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqlx = { workspace = true }
tempfile = { workspace = true }
test-context = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
utoipa = { workspace = true, features = ["url"] }
uuid = { workspace = true, features = ["v5"] }

[dev-dependencies]
chrono = { workspace = true }
time = { workspace = true, features = ["macros"] }
rstest = { workspace = true }
serde_json = { workspace = true }
test-log = { workspace = true, features = ["log", "trace"] }
tokio = { workspace = true, features = ["full"] }
