[package]
name = "trustify-common"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
trustify-migration = { workspace = true }

anyhow = { workspace = true }
bytesize = { workspace = true, features = ["serde"] }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
concat-idents = { workspace = true }
cpe = { workspace = true }
hex = { workspace = true }
human-date-parser = { workspace = true }
itertools = { workspace = true }
lenient_semver = { workspace = true }
log = { workspace = true }
native-tls = { workspace = true }
packageurl = { workspace = true }
pem = { workspace = true }
postgresql_embedded = { workspace = true, features = ["blocking", "tokio"] }
regex = { workspace = true }
reqwest = { workspace = true, features = ["native-tls"] }
ring = { workspace = true }
schemars = { workspace = true }
sea-orm = { workspace = true, features = ["sea-query-binder", "sqlx-postgres", "runtime-tokio-rustls", "macros"] }
sea-query = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
utoipa = { workspace = true, features = ["url"] }
uuid = { workspace = true, features = ["v5", "serde"] }

[dev-dependencies]
chrono = { workspace = true }
rand = { workspace = true }
rstest = { workspace = true }
serde_json = { workspace = true }
test-log = { workspace = true, features = ["log", "trace"] }
time = { workspace = true, features = ["macros"] }
tokio = { workspace = true, features = ["full"] }
