[package]
name = "trustify-cvss"
version = "0.1.0-alpha.13"
edition = "2021"

[dependencies]
serde = { workspace = true, features = ["derive"] }
utoipa = { workspace = true }

[dev-dependencies]
test-log = { workspace = true, features = ["log", "trace"] }
tokio = { workspace = true, features = ["full"] }
