[package]
name = "trustify-cvss"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[lib]
doctest = false

[dependencies]
serde = { workspace = true, features = ["derive"] }
utoipa = { workspace = true }

[dev-dependencies]
test-log = { workspace = true, features = ["log", "trace"] }
tokio = { workspace = true, features = ["full"] }
