[package]
name = "trustify-entity"
version = "0.1.0-alpha.12"
edition = "2021"

[dependencies]
trustify-common = { workspace = true }
trustify-cvss = { workspace = true }

async-graphql = { workspace = true, features = ["uuid", "time"] }
cpe = { workspace = true }
sea-orm = { workspace = true, features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-json",
    "postgres-array",
] }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true, features = ["derive"]}
time = { workspace = true }
utoipa = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
log = { workspace = true }
test-log = { workspace = true, features = ["log", "trace"] }
