[package]
name = "trustify-entity"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
trustify-common = { workspace = true }
trustify-cvss = { workspace = true }

async-graphql = { workspace = true, features = ["uuid", "time"] }
cpe = { workspace = true }
schemars = { workspace = true }
sea-orm = { workspace = true, features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-json",
    "postgres-array",
] }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true, features = ["derive"] }
time = { workspace = true }
utoipa = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
log = { workspace = true }
rstest = { workspace = true }
test-context = { workspace = true }
test-log = { workspace = true, features = ["log", "trace"] }
tokio = { workspace = true, features = ["full"] }

trustify-test-context = { workspace = true }
