[package]
name = "trustify-importer"
version = "0.1.0"
edition = "2021"

[dependencies]
trustify-entity = { path = "../entity" }
trustify-migration = { path = "../migration" }
trustify-common = { path = "../common" }
trustify-module-graph = { path = "../modules/graph" }
trustify-module-ingestor = { path = "../modules/ingestor" }
trustify-module-importer = { path = "../modules/importer" }
anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true, features = ["derive"] }
csaf = { workspace = true }
csaf-walker = { workspace = true, features = ["crypto-openssl", "csaf"] }
env_logger = { workspace = true }
indicatif = { workspace = true, features = [] }
indicatif-log-bridge = { workspace = true }
log = { workspace = true }
packageurl = { workspace = true }
parking_lot = { workspace = true }
sbom-walker = { workspace = true, features = ["crypto-openssl", "cyclonedx-bom", "spdx-rs"] }
sea-orm = { workspace = true, features = ["sea-query-binder", "sqlx-postgres", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = { workspace = true }
sea-query = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
spdx-rs = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true, features = ["full"] }
url = { workspace = true }
walker-common = { workspace = true }
